lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:5: error: type mismatch;
 found   : java.util.List[lessons.lander.universe.Point]
 required: scala.collection.immutable.List[lessons.lander.universe.Point]
  	val Liste:List[Point] = getSol()
                                      ^Lander:10: error: type mismatch;
 found   : Double
 required: Int
  			debut(0)=Liste(i).x
                                          ^Lander:11: error: type mismatch;
 found   : Double
 required: Int
  			debut(1)=Liste(i).y
                                          ^Lander:12: error: type mismatch;
 found   : Double
 required: Int
  			fin(0)=Liste(i+1).x
                                          ^Lander:13: error: type mismatch;
 found   : Double
 required: Int
  			fin(1)=Liste(i+1).y
                                          ^Lander:16: error: not enough arguments for method goToFlat: (a: Double, b: Double)Unit.
Unspecified value parameters a, b.
  	goToFlat()
                ^Lander:17: error: not enough arguments for method descend: (sol: Int)Unit.
Unspecified value parameter sol.
  	descend()
               ^Lander:23: error: value =- is not a member of Int
		sens=-1
                    ^Lander:31: error: not found: value setAngle
			setAngle(sens*(-45))
                        ^Lander:43: error: not found: value setAngle
		setAngle(0)
                ^